--- a/sanpham/post.html
+++ b/sanpham/post.html
@@ -8,7 +8,11 @@
     <meta name="description" content="EasyTech là blog công nghệ uy tín, nơi bạn có thể tìm thấy những đánh giá chi tiết, thông tin mới nhất về các sản phẩm công nghệ và câu hỏi đáp từ các chuyên gia. Cập nhật tin tức và đánh giá sản phẩm công nghệ dễ hiểu và dễ tiếp cận." />
     <meta name="keywords" content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới" />
     <meta name="robots" content="index, follow" />
-
+    <link
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="/EasyTech/img/logo.jpeg"
+  />
     <!-- Tailwind -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
