--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       content="EasyTech, đánh giá sản phẩm công nghệ, thông tin công nghệ, blog công nghệ, sản phẩm công nghệ, câu hỏi đáp công nghệ, KOL công nghệ, đánh giá sản phẩm thực tế, công nghệ dễ hiểu, sản phẩm công nghệ mới"
     />
     <meta name="robots" content="index, follow" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="/EasyTech/img/logo.jpeg"
+    />
     <!-- Tailwind -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
