--- a/sanpham/post3.html
+++ b/sanpham/post3.html
@@ -504,7 +504,17 @@
               có thể là chiếc máy tính xách tay tốt nhất trong phân khúc laptop
               kích thước 14 inch đến 15 inch đó.
             </p>
+            <h1 class="text-2xl font-bold pb-3">
+              Những nơi bán Honor MagicBook Art 14 chất lượng, uy tín.
+            </h1>
             <ul>
+              <li>
+                <b></b>
+                NGUYENTHANHPC:
+                <a href="https://jaxieee2125.github.io/NguyenThanhPCStatic/"
+                  ><u style="color: blue">Nhấp vào đây để mua ngay</u></a
+                >
+              </li>
               <li>
                 Thế giới di động:
                 <a
